<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_header">My Nanodegree Apps!</string>
    <string name="spotify_streamer_app">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="library_app">Library App</string>
    <string name="xyz_reader_app">XYZ reader</string>
    <string name="capstone_app">capstone:my own app</string>

</resources>
